<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.example.android.oscarine.signin.SigninViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/signinText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/Signin"
            android:textSize="18sp" />


        <EditText
            android:id="@+id/loginUsernameInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/Username"
            android:inputType="textPersonName"
            android:text="@={viewModel.username}" />

        <EditText
            android:id="@+id/loginPasswordInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/Password"
            android:inputType="textPassword"
            android:text="@={viewModel.password}" />

        <Button
            android:id="@+id/loginSubmitButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Submit" />

        <TextView
            android:id="@+id/loginResponse"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="login API response"
            android:textSize="18sp"
            android:gravity="center_horizontal"
            android:text="@{viewModel.messages}"/>

    </LinearLayout>

</layout>